<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">隐蔽终端</string>
    <string name="pretend_name_douyin">抖音</string>
    <string name="pretend_name_kuaishou">快手</string>
    <string name="pretend_name_qq">QQ</string>
    <string name="pretend_name_wechat">微信</string>
    <string name="pretend_name_baidumap">百度地图</string>
    <string name="pretend_name_douyin_set">抖音设置</string>
    <string name="pretend_name_kuaishou_set">快手设置</string>
    <string name="pretend_name_qq_set">QQ设置</string>
    <string name="pretend_name_wechat_set">微信设置</string>
    <string name="pretend_name_baidumap_set">百度地图设置</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="setting_app_name">省电设置</string>
    <string name="startRecording">start</string>
    <string name="stopRecording">stop</string>
    <string name="btn_invisible">INVISIBLE</string>
    <string name="notification_title">省电模式已打开</string>
    <string name="notification_info">点此可关闭服务</string>
    <string name="record_file_setting">录像文件设置</string>
    <string name="enter_to_detail_setting">点击可进行详细设置</string>
    <string name="hide_show_all_files">文件加密</string>
    <string name="delete_all_files">紧急删除</string>
    <string name="be_careful">删除所有取证文件，谨慎操作！</string>
    <string name="deletting">正在清理录像文件</string>
    <string name="show_all_files">已显示所有文件</string>
    <string name="hide_all_files">已隐藏所有文件</string>
    <string name="store_location">文件存储位置</string>
    <string name="default_record_file_location">/mnt/sdcard/MyApp</string>
    <string name="sdcard_record_file_location">/storage/extSdCard/MyApp</string>
    <string name="mobile">手机</string>
    <string name="sdcard">SD卡</string>
    <string name="old_passwd">旧密码</string>
    <string name="new_passwd">新密码</string>
    <string name="plz_leave_msg">请留下您的宝贵意见</string>
    <string name="try_use_bad_soft">我在尝试使用盗版软件</string>
    <string name="btn_send">发送</string>
    <string name="btn_cancle">取消</string>
    <string name="title_report_issue">问题反馈</string>
    <string name="your_name">您的称呼</string>
    <string name="your_connect_inof">联系方式</string>
    <string name="bug_info">问题描述</string>
    <string name="point_info">您的反馈信息将以邮件的形式发送至开发者</string>
    <string name="menu_settings">设置</string>
    <string name="front_camera">前置摄像头</string>
    <string name="back_camera">后置摄像头</string>
    <string name="syste_res_busy">您按的有点快哦，请稍候再试</string>
    <string name="plz_install_sdcard">Sd卡不存在，请插入sd卡后重试</string>
    <string name="btn_change">修改</string>
    <string name="title_change_passwd">修改密码</string>
    <string name="info_wrong_old_passwd">原始密码错误</string>
    <string name="info_change_passwd_success">修改密码成功</string>
    <string name="info_loaddata_error">数据加载失败</string>
    <string name="btn_exit">退出</string>
    <string name="info_thanks_your_report">谢谢您的宝贵意见</string>
    <string name="plz_buy_software">请使用正版软件</string>
    <string name="soft_is_running">程序运行中，请先关闭省电助手后重试</string>
    <string name="info_select_front_camera">已选择前置摄像头</string>
    <string name="info_select_back_camera">已选择后置摄像头</string>
    <string name="shake_small">小</string>
    <string name="shake_normal">中</string>
    <string name="shake_big">大</string>
    <string name="shake_very_big">特大</string>
    <string name="record_free">无限制</string>
    <string name="service_on">服务已开启</string>
    <string name="service_off">服务已关闭</string>
    <string name="hide_file">隐藏录像文件</string>
    <string name="hide_file_on">服务已开启</string>
    <string name="hide_file_off">服务已关闭</string>
    <string name="special_function">特殊功能</string>
    <string name="open_special_func">已开启特殊功能</string>
    <string name="close_special_func">已关闭特殊功能</string>
    <string name="preview_in_time">实时校对</string>
    <string name="shake_values">动作调节</string>
    <string name="select_camera">选择摄像头</string>
    <string name="camera">摄像头</string>
    <string name="no_preview_record">录像前无预览</string>
    <string name="preview_record">录像前显示预览</string>
    <string name="show_preview">显示预览</string>
    <string name="record_time">录像时间</string>
    <string name="shake_value_select_info">选择摇动幅度</string>
    <string name="click_to_change_passwd">点此修改密码</string>
    <string name="change_passwd">修改密码</string>
    <string name="bug_reprot">问题反馈</string>
    <string name="about">关于</string>
    <string name="pref_which_camera_default">0</string>
    <string name="whether_record">false</string>
    <string name="whether_preview">false</string>
    <string name="whether_shake_start">false</string>
    <string name="pref_record_time_default">5</string>
    <string name="title_activity_super_manager">SuperManagerActivity</string>
    <string name="title_activity_camera1">Camera1Activity</string>
    <string name="accessibility_description">开启辅助服务：开启此服务后正常音量键功能会失去，要恢复关闭即可，此操作开启只对隐蔽终端有效。</string>
    <string name="pmws_set_name">隐蔽终端设置</string>

</resources>
